kubernetes/apps/productivity/pi-hole/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
  # annotations:
  # traefik.ingress.kubernetes.io/service.serversscheme: https
  # traefik.ingress.kubernetes.io/service.serverstransport: networking-insecureskipverify@kubernetescrd
spec:
  externalName: pihole.home
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  sessionAffinity: None
  type: ExternalName
