kubernetes/apps/productivity/pi-hole/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-hole
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: dns
    hajimari.io/group: Network
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    hajimari.io/icon: printer-3d-nozzle
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: https://auth.${SECRET_DOMAIN}/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
     proxy_set_header X-Forwarded-Method $request_method;
     proxy_set_header X-Forwarded-Scheme $scheme;
spec:
  ingressClassName: internal
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - pi-hole.${SECRET_DOMAIN}
  rules:
    - host: pi-hole.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pi-hole
                port:
                  number: 443
